--- a/mysite/templates/chat/room.html
+++ b/mysite/templates/chat/room.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Room</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </head>
 <body>
     <textarea id="chat-log" cols="100" rows="20"></textarea><br>
     <input id="chat-message-input" type="text" size="100"><br>
     <input id="chat-message-submit" type="button" value="Send">
+    <script src="{% static 'reconnecting-websocket.js' %}"></script>
     {{ room_name|json_script:"room-name" }}
     <script>
         const roomName = JSON.parse(document.getElementById('room-name').textContent);
 
-        const chatSocket = new WebSocket(
+        const chatSocket = new ReconnectingWebSocket(
             'ws://'
             + window.location.host
             + '/ws/chat/'
@@ -22,6 +26,18 @@
 
         chatSocket.onmessage = function(e) {
             const data = JSON.parse(e.data);
+            var message = data['message'];
+            var author = message['author'];
+            var msgListTag = document.createElement('li');
+            var pTag = document.createElement('p');
+            pTag.textContent = message.content;
+
+            if (author === username){
+                msgListTag.className = 'sent';
+            }
+            else{
+                msgListTag.className = 'replies';
+            }
             document.querySelector('#chat-log').value += (data.message + '\n');
         };
 
@@ -40,7 +56,9 @@
             const messageInputDom = document.querySelector('#chat-message-input');
             const message = messageInputDom.value;
             chatSocket.send(JSON.stringify({
-                'message': message
+                'message': message,
+                'command': message,
+                'from': {{ username }},
             }));
             messageInputDom.value = '';
         };
