--- a/mysite/templates/chat/room.html
+++ b/mysite/templates/chat/room.html
@@ -6,62 +6,98 @@
     <title>Room</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <textarea id="chat-log" cols="100" rows="20"></textarea><br>
-    <input id="chat-message-input" type="text" size="100"><br>
-    <input id="chat-message-submit" type="button" value="Send">
-    <script src="{% static 'reconnecting-websocket.js' %}"></script>
-    {{ room_name|json_script:"room-name" }}
-    <script>
-        const roomName = JSON.parse(document.getElementById('room-name').textContent);
 
-        const chatSocket = new ReconnectingWebSocket(
+        <div class="p-10 lg:p-20 text-center">
+            <h1 class="text-3xl lg:text-6xl text-white">{{ room.name }}</h1>
+        </div>
+
+    <div class="lg:w-2/4 mx-4 lg:mx-auto p-4 bg-white rounded-xl">
+        <div class="chat-messages space-y-3" id="chat-messages">
+            {% for m in messages %}<b>{{ m.author.username }}</b>: {{ m.message }}<br>{% endfor %}
+        </div>
+    </div>
+
+    <div class="lg:w-2/4 mt-6 mx-4 lg:mx-auto p-4 bg-white rounded-xl">
+        <form method="post" action="." class="flex">
+            <input type="text" name="content" class="flex-1 mr-3" placeholder="Your message..." id="chat-message-input">
+
+            <button
+                class="px-5 py-3 rounded-xl text-white bg-teal-600 hover:bg-teal-700"
+                id="chat-message-submit"
+            >Submit</button>
+        </form>
+    </div>
+
+
+    {{ room.slug|json_script:"json-roomname" }}
+    {{ request.user.username|json_script:"json-username" }}
+
+    <script>
+        const roomName = JSON.parse(document.getElementById('json-roomname').textContent);
+        const userName = JSON.parse(document.getElementById('json-username').textContent);
+        const chatSocket = new WebSocket(
             'ws://'
             + window.location.host
-            + '/ws/chat/'
+            + '/ws/'
             + roomName
             + '/'
         );
 
+        chatSocket.onclose = function(e) {
+            console.log('onclose')
+        }
+
         chatSocket.onmessage = function(e) {
             const data = JSON.parse(e.data);
-            var message = data['message'];
-            var author = message['author'];
-            var msgListTag = document.createElement('li');
-            var pTag = document.createElement('p');
-            pTag.textContent = message.content;
 
-            if (author === username){
-                msgListTag.className = 'sent';
+            if (data.message) {
+                document.querySelector('#chat-messages').innerHTML += ('<b>' + data.username + '</b>: ' + data.message + '<br>');
+            } else {
+                alert('The message was empty!')
             }
-            else{
-                msgListTag.className = 'replies';
-            }
-            document.querySelector('#chat-log').value += (data.message + '\n');
-        };
 
-        chatSocket.onclose = function(e) {
-            console.error('Chat socket closed unexpectedly');
+            scrollToBottom();
         };
 
         document.querySelector('#chat-message-input').focus();
         document.querySelector('#chat-message-input').onkeyup = function(e) {
-            if (e.keyCode === 13) {  // enter, return
+            if (e.keyCode === 13) {
                 document.querySelector('#chat-message-submit').click();
             }
         };
 
         document.querySelector('#chat-message-submit').onclick = function(e) {
+            e.preventDefault()
+
             const messageInputDom = document.querySelector('#chat-message-input');
             const message = messageInputDom.value;
+
+            console.log({
+                'message': message,
+                'username': userName,
+                'room': roomName
+            })
+
             chatSocket.send(JSON.stringify({
                 'message': message,
-                'command': message,
-                'from': {{ username }},
+                'username': userName,
+                'room': roomName
             }));
+
             messageInputDom.value = '';
+
+            return false
         };
-    </script>
+
+        function scrollToBottom() {
+            let objDiv = document.getElementById("chat-messages");
+            objDiv.scrollTop = objDiv.scrollHeight;
+        }
+
+        scrollToBottom();
+</script>
 </body>
 </html>
