--- a/mysite/templates/chat/rooms.html
+++ b/mysite/templates/chat/rooms.html
@@ -3,22 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Index</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </head>
 <body>
-<div class="p-10 lg:p-20 text-center">
-    <h1 class="text-3xl lg:text-6xl text-white">Rooms</h1>
-</div>
 
-<div class="w-full flex flex-wrap items-center">
-    {% for room in rooms %}
-        <div class="w-full lg:w-1/4 px-3 py-3">
-            <div class="p-4 bg-white shadow rounded-xl text-center">
-                <h2 class="mb-5 text-2xl font-semibold">{{ room.name }}</h2>
+    <div class="p-10 lg:p-20 text-center">
+        <h1 class="text-3xl lg:text-6xl text-white">Rooms</h1>
+    </div>
 
-                <a href="{% url 'room' room.slug %}" class="px-5 py-3 block rounded-xl text-white bg-teal-600 hover:bg-teal-700">Join</a>
-            </div>
+    <div class="w-full flex flex-wrap items-center">
+        <div class="list-group">
+            {% for room in rooms %}
+                    <div class="p-4 bg-white shadow rounded-xl text-center">
+                        <h2 class="mb-5 text-2xl font-semibold">{{ room.name }}</h2>
+                        <a href="{% url 'room' room.slug %}" class="">
+                            <button type="button" class="list-group-item list-group-item-action active">
+                                Join
+                            </button>
+                        </a>
+                    </div>
+            {% endfor %}
         </div>
-    {% endfor %}
-</div>
+    </div>
+
+    <div>
+        <form action="/rooms/logout" method="POST">{% csrf_token %}
+            <button class="btn btn-primary rounded-xl" type="submit">
+                Logout
+            </button>
+        </form>
+    </div>
 </body>
 </html>
